--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,22 @@ body {
 	font-family: Trebuchet MS, sans-serif;
 }
 
+h1 {
+	text-align: center;
+}
+
+h2 {
+	text-align: center;
+}
+
+h3 {
+	text-align: center;
+}
+
+p {
+	text-align: center;
+}
+
 #main-navbar{
 	background-color: #000;
 	position: relative;
