--- a/style/style.css
+++ b/style/style.css
@@ -133,9 +133,11 @@ ul li li li{
 }
 
 .chess ul li li{
+	float: right;
 	color: #769656;
 }
 
 .chess ul li li li{
 	color: #eeeed2;
+	float: right;
 }
