Adding floats to css for the resume page

--- a/style/style.css
+++ b/style/style.css
@@ -70,6 +70,7 @@ ul li li li{
 .resume h3{
 	color: #DD1717;
 	font-size: 20px;
+	float: left;
 }
 
 .resume h1{
@@ -80,15 +81,18 @@ ul li li li{
 .resume p{
 	color: #ffb433;
 	font-size: 18px;
+	float: left;
 }
 
 
 .resume ul li{
 	color: #000;
+	float: left;
 }
 
 .resume ul li li{
 	color: #33DBFF;
+	float: left;
 }
 
 .pokemon{
