--- a/style/style.css
+++ b/style/style.css
@@ -69,24 +69,29 @@ ul li li li{
 .resume h3{
 	color: #DD1717;
 	font-size: 20px;
+	position: static;
 }
 
 .resume h1{
 	color: #50C878;
 	font-size: 30px;
+	position: static;
 }
 
 .resume p{
 	color: #ffb433;
 	font-size: 18px;
+	position: static;
 }
 
 .resume ul li{
 	color: #000;
+	position: static;
 }
 
 .resume ul li li{
 	color: #33DBFF;
+	position: static;
 }
 
 .pokemon{
