--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,7 @@ ul li li li{
 	color: #DD1717;
 	font-size: 20px;
 	position: static;
-	left: 3px;
+	right: 5px;
 }
 
 .resume h1{
@@ -83,19 +83,19 @@ ul li li li{
 	color: #ffb433;
 	font-size: 18px;
 	position: static;
-	left: 3px;
+	right: 5px;
 }
 
 .resume ul li{
 	color: #000;
 	position: static;
-	left: 3px;
+	right: 5px;
 }
 
 .resume ul li li{
 	color: #33DBFF;
 	position: static;
-	left: 6px;
+	right: 10px;
 }
 
 .pokemon{
