--- a/style/style.css
+++ b/style/style.css
@@ -19,11 +19,11 @@ ul li{
 }
 
 ul li li{
-	font-size: 16px
+	font-size: 16px;
 }
 
 ul li li li{
-	font-size: 15px
+	font-size: 15px;
 }
 
 #main-navbar{
@@ -52,7 +52,8 @@ ul li li li{
 	display: block;
 	float: left;
 	left: 50%;
-	right: 50%
+	right: 50%;
+	left: -1%;
 }
 	
 #navbar-container ul li a{
@@ -70,6 +71,8 @@ ul li li li{
 .resume h3{
 	color: #DD1717;
 	font-size: 20px;
+	position: relative;
+	left: 1%;
 }
 
 .resume h1{
@@ -80,14 +83,20 @@ ul li li li{
 .resume p{
 	color: #ffb433;
 	font-size: 18px;
+	position: relative;
+	left: 1%;
 }
 
 .resume ul li{
 	color: #000;
+	position: relative;
+	left: 1%;
 }
 
 .resume ul li li{
 	color: #33DBFF;
+	position: relative;
+	left: 1.5%;
 }
 
 .pokemon{
